Fix: Wrapped goals cards to have same hight

--- a/src/components/home/InitiativeGoals/InitiativeGoals.module.sass
+++ b/src/components/home/InitiativeGoals/InitiativeGoals.module.sass
@@ -41,6 +41,7 @@
     background-color: $white_basic
     border-radius: 15px
     padding: 50px 25px
+    max-height: 200px
 
     .cardTitle
         font-weight: 600
